2016-03-29  Andy Buckley  <andy.buckley@cern.ch>

	* ALEPH_1996_S3196992.cc, ATLAS_2010_S8914702.cc,
	ATLAS_2011_I921594.cc, ATLAS_2011_S9120807.cc,
	ATLAS_2012_I1093738.cc, ATLAS_2012_I1199269.cc,
	ATLAS_2013_I1217867.cc, ATLAS_2013_I1244522.cc,
	ATLAS_2013_I1263495.cc, ATLAS_2014_I1307756.cc,
	ATLAS_2015_I1364361.cc, CDF_2008_S7540469.cc,
	CMS_2015_I1370682.cc, MC_JetSplittings.cc, STAR_2006_S6870392.cc:
	Updates for new FastJets interface, and other cleaning.

	* Deprecate 'standalone' FastJets constructors -- they are
	misleading.

	* More improvements around jets, including unbound conversion and
	filtering routines between collections of Particles, Jets, and
	PseudoJets.

	* Place 'Cut' forward declaration in a new Cuts.fhh header.

	* Adding a Cuts::OPEN extern const (a bit more standard- and
	constant-looking than Cuts::open())

2016-03-28  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to FastJets constructors, including specification
	of optional AreaDefinition as a constructor arg, disabling dodgy
	no-FS constructors which I suspect don't work properly in the
	brave new world of automatic ghost tagging, using a bit of
	judicious constructor delegation, and completing/exposing use of
	shared_ptr for internal memory management.

2016-03-26  Andy Buckley  <andy.buckley@cern.ch>

	* Remove Rivet/Tools/RivetBoost.hh and Boost references from
	rivet-config, rivet-buildplugin, and configure.ac. It's gone ;-)

	* Replace Boost assign usage with C++11 brace initialisers. All
	Boost use is gone from Rivet!

	* Replace Boost lexical_cast and string algorithms.

2016-03-25  Andy Buckley  <andy.buckley@cern.ch>

	* Start replacing Boost foreach and shared_ptr with C++11 features.

	* Add an EXAMPLE_SMEAR analysis.

	* Propagate identity and C++ dialect flags from Rivet to
	rivet-config and rivet-buildplugin.

	* Require C++11 support in Rivet compilation.

2016-03-23  Andy Buckley  <andy.buckley@cern.ch>
